--- a/ui/app/components/main/auth/login/login.component.html
+++ b/ui/app/components/main/auth/login/login.component.html
@@ -1,13 +1,32 @@
-<mat-card>
-    <form (submit)="login(loginForm)" #loginForm="ngForm">
-      <mat-form-field>
-        <input matInput name="email" ngModel type="email" placeholder="E-Mail" #emailInput="ngModel" required email>
-        <mat-error *ngIf="emailInput.invalid">Please enter a valid email.</mat-error>
-      </mat-form-field>
-      <mat-form-field>
-        <input type="password" name="password" ngModel matInput placeholder="Password" #passwordInput="ngModel" required>
-        <mat-error *ngIf="passwordInput.invalid">Please enter a valid password.</mat-error>
-      </mat-form-field>
-      <button mat-raised-button color="primary" type="submit">{{title}}</button>
-    </form>
-</mat-card>
+<div class="form-container">
+  <mat-card>
+      <mat-card-title>
+          {{'appName' | translate}}
+      </mat-card-title>
+      <mat-card-content>
+          <form (submit)="formSubmit(loginForm)" #loginForm="ngForm">
+            <mat-form-field *ngIf="state == 'signup'">
+              <input type="text" name="firstName" ngModel matInput placeholder="First Name" #firstNameInput="ngModel" required>
+              <mat-error *ngIf="firstNameInput.invalid">{{ 'invalidForm.firstName' | translate }}</mat-error>
+            </mat-form-field>
+            <mat-form-field *ngIf="state == 'signup'">
+              <input type="text" name="lastName" ngModel matInput placeholder="Last Name" #lastNameInput="ngModel" required>
+              <mat-error *ngIf="lastNameInput.invalid"> {{ 'invalidForm.lastName' | translate }} </mat-error>
+            </mat-form-field>
+            <mat-form-field>
+              <input matInput name="email" ngModel type="email" placeholder="E-Mail" #emailInput="ngModel" required email>
+              <mat-error *ngIf="emailInput.invalid"> {{ 'invalidForm.email' | translate }} </mat-error>
+            </mat-form-field>
+            <mat-form-field>
+              <input type="password" name="password" minlength="6" ngModel matInput placeholder="Password" #passwordInput="ngModel" required>
+              <mat-error *ngIf="passwordInput.invalid"> {{ 'invalidForm.password' | translate }} </mat-error>
+            </mat-form-field>
+            <button mat-raised-button color="primary" type="submit" class="submit-button" [disabled]="loginForm.invalid">{{title}}</button>
+          </form>
+      </mat-card-content>
+      <mat-card-actions>
+          <span *ngIf="state=='login'"> or <a routerLink="/signup"> {{'loginForm.signup' | translate }} </a></span>
+          <span *ngIf="state=='signup'"> {{'loginForm.accountExists' | translate }} <a routerLink="/login">{{'loginForm.login' | translate}}</a> </span>
+      </mat-card-actions>
+  </mat-card>
+</div>
